custom-elements/taskbar/task.css
.task {
    position: relative;
    display: block;
    width: 50px;
    height: 50px;
}

.load-animation {
    animation: enter 0.5s 1 ease forwards;
}

.unload-animation {
    animation: enter 0.5s 1 ease reverse forwards;
}

.task:not([data-focused]) .preview-image:hover,
.task:has(.previews:hover) .preview-image,
.task[data-focused] .preview-image {
    transform: scale(1.1) translateY(-11px);
}

.task .preview-image:active {
    transform: scale(1) translateY(-9px) !important;
}

.task .preview-image {
    width: 100%;
    height: 100%;
    transition: transform 0.2s;
}

.task .preview-image * {
    image-rendering: pixelated; /* Universal support since 2021   */
    -ms-interpolation-mode: nearest-neighbor; /* IE8+                           */
}

.task .previews {
    box-sizing: border-box;
    position: absolute;
    display: flex;
    justify-content: center;
    align-items: start;
    height: 168px;
    background-color: rgb(130 0 66 / 29%);
    border-radius: 5px;
    bottom: calc(100% + 23px);
    left: 50%;
    transform: translateX(-50%);
    backdrop-filter: blur(5px);
    opacity: 0;
    transition: 0.1s ease-out;
    transition-delay: 0.35s;
}

.task[data-focused] .previews {
    opacity: 1;
}

.task .previews::after {
    content: "";
    position: absolute;
	bottom: -10px;
    display: block;
    width: 100%;
    height: 20px;
}

.task:has(.preview-image:hover) .previews {
    opacity: 1;
}

.task:has(.preview-image:active) .previews {
    opacity: 0;
}
.task .previews:hover {
    opacity: 1;
}

/* ------------ Preview ------------- */

.task .preview {
    position: relative;
    width: 245px;
    height: 100%;
	border-radius: 5px;
    display: grid;
    grid-template-rows: auto 1fr;
}

.task .preview:hover {
    background-color: #ffffff38;
}

.preview header {
    display: flex;
    justify-content: space-between;
    padding: 10px;
    padding-bottom: 0;
}

.preview header .info {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 10px;
}

.preview header .info h2 {
    color: white;
    font-size: 1rem;
    font-weight: normal;
    margin: 0;
}

.preview header .info img {
    width: 18px;
}

.preview .window-preview-wrapper {
    position: relative;
}

.preview .window-preview-wrapper > * {
    top: 50% !important;
    left: 50% !important;
    translate: -50% -50%;
    pointer-events: none;
}

.preview .task-close-button {
    width: 25px;
    height: 25px;
    border: 0;
    border-radius: 2px;
    aspect-ratio: 1/1;
    font-size: 1rem;
    color: white;
    background: #0000003b;
    opacity: 0;
    cursor: pointer;
}

.preview .task-close-button:hover {
    background: rgb(174, 36, 36);
}

.task .preview:hover .task-close-button {
    opacity: 1;
}

.task .amount {
    right: -10px;
    display: flex;
    justify-content: center;
    align-items: center;
    position: absolute;
    bottom: -3px;
    border-radius: 11px;
    background-color: #ff0000db;
    aspect-ratio: 1/1;
    color: white;
    font-weight: 900;
    padding: 10px;
    width: 0;
    height: 0;
    opacity: 0;
    transition: 0.3s;
    pointer-events: none;
}

.task:not([data-focused]) .preview-image:hover + .amount,
.task:has(.previews:hover) .amount,
.task[data-focused] .amount {
	left: 50%;
	transform: translateX(-50%);
}

.bounce-animation {
    animation: bounce 0.3s ease-in;
}

@keyframes bounce {
    0% {
        scale: 1;
    }
    50% {
        scale: 0.9;
    }
    100% {
        scale: 1;
    }
}

@keyframes enter {
    0% {
        opacity: 0;
        transform: translateY(50px);
    }
    60% {
        opacity: 1;
        transform: translateY(-8px);
    }
    100% {
        transform: translateY(0);
    }
}

